--- a/Resources/config/blast_menu.yml
+++ b/Resources/config/blast_menu.yml
@@ -8,7 +8,7 @@ parameters:
 
                 sil.email.menu_label.email:
                     icon: cloud-upload
-                    route: admin_sil_email_list
+                    route: admin_email_list
                     order: 10
 
     blast_menu.settings:
@@ -20,5 +20,5 @@ parameters:
 
                 sil.email.menu_label.email_settings_templates:
                     icon: crop
-                    route: admin_sil_email_template_list
+                    route: admin_email_template_list
                     order: 10
