--- a/Resources/config/blast_menu.yml
+++ b/Resources/config/blast_menu.yml
@@ -1,24 +1,25 @@
 parameters:
-    blast_menu.root:
+    blast_menu:
+        root:
 
-        sil.email.menu_label.emailing:
-            icon: envelope-o
-            order: 11000
-            children:
+            sil.email.menu_label.emailing:
+                icon: envelope-o
+                order: 11000
+                children:
 
-                sil.email.menu_label.email:
-                    icon: cloud-upload
-                    route: admin_email_list
-                    order: 10
+                    sil.email.menu_label.email:
+                        icon: cloud-upload
+                        route: admin_email_list
+                        order: 10
 
-    blast_menu.settings:
+        settings:
 
-        sil.email.menu_label.email_settings:
-            icon: envelope
-            order: 11000
-            children:
+            sil.email.menu_label.email_settings:
+                icon: envelope
+                order: 11000
+                children:
 
-                sil.email.menu_label.email_settings_templates:
-                    icon: crop
-                    route: admin_email_template_list
-                    order: 10
+                    sil.email.menu_label.email_settings_templates:
+                        icon: crop
+                        route: admin_email_template_list
+                        order: 10
